src/objects/Document_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Action_Status__c</fullName>
        <label>Action Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allowed_Days__c</fullName>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicable_Regulations__c</fullName>
        <label>Applicable Regulations</label>
        <picklist>
            <picklistValues>
                <fullName>AR1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ApprovalProcess__c</fullName>
        <label>ApprovalProcess</label>
        <picklist>
            <picklistValues>
                <fullName>Change Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Due Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Approval</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that states approval process is completed</description>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOC_Approver1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOC_Approver2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOC_Approver3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOC_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorised_Entity_Groups_Name__c</fullName>
        <label>Authorised Entity Groups Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorised_Entity_Groups__c</fullName>
        <label>Authorised Entity Groups</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorised_Entity_Users_Name__c</fullName>
        <label>Authorised Entity Users Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorised_Entity_Users__c</fullName>
        <label>Authorised Entity Users</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Expire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Expire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatically_Expire_Previous_Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Expire Previous Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>BU 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CD_Customer_Name__c</fullName>
        <formula>CD_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is customer defined field.</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Document Profiles</relationshipLabel>
        <relationshipName>Document_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Category1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Change_Management_Name__c</fullName>
        <formula>Change_Management__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Management</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Management</label>
        <referenceTo>Change_Management__c</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collaboration_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag, enables collaboration review if it is checked</description>
        <label>Collaboration Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContentDocumentId__c</fullName>
        <description>To Hold Primary Document Id</description>
        <inlineHelpText>To Hold Primary Document Id</inlineHelpText>
        <label>ContentDocumentId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentVersionId__c</fullName>
        <description>To Hold Primary Content Version Id</description>
        <inlineHelpText>To Hold Primary Content Version Id</inlineHelpText>
        <label>ContentVersionId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentApprovalSequenceNumber__c</fullName>
        <description>Field to automate sequential  approval process to next  step</description>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Rev__c</fullName>
        <label>Current Rev</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Purge__c</fullName>
        <description>Date of Purge:</description>
        <label>Date of Purge</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <formula>Department__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Business_Entity__c</referenceTo>
        <relationshipName>Document_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Profile_Auto_Number__c</fullName>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Document Profile Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Document_Specific_Changes__c</fullName>
        <label>Document Specific Changes</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Type_Name__c</fullName>
        <formula>Document_Type__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Type</label>
        <referenceTo>Document_Type__c</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effectiveness_Review_Date__c</fullName>
        <label>Effectiveness Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effectiveness_Review_In_Advance__c</fullName>
        <label>Effectiveness Review In Advance(In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enable_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expire_After__c</fullName>
        <label>Expire After (In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Followers__c</fullName>
        <label>Followers</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Footer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Footer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grace_Period_for_Release__c</fullName>
        <label>Grace Period for Release (In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impacted_Sites__c</fullName>
        <label>Impacted Sites</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in sequential approval process to preserve the current submitter to next step(approval)</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Document_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiating_Site_Name__c</fullName>
        <formula>Initiating_Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiating Site</label>
        <referenceTo>Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Document Profiles</relationshipLabel>
        <relationshipName>Document_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Left_vertically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Left(vertically)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Expiration_Date__c</fullName>
        <label>New Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Document_type_owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Rev__c</fullName>
        <label>Previous Rev</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_To_Approver__c</fullName>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Numbering_Scheme__c</fullName>
        <label>Numbering Scheme</label>
        <picklist>
            <picklistValues>
                <fullName>Scheme1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheme2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheme3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreRelease_Duration_Date__c</fullName>
        <label>PreRelease Duration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Release_Duration_Date__c</fullName>
        <description>PreRelease Duration Date (document is released)</description>
        <label>Pre Release Duration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_File_Location__c</fullName>
        <label>Primary File Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_File_Name__c</fullName>
        <label>Primary File Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <formula>Process__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipName>Document_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Document_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Protected_Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protected Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change__c</fullName>
        <label>Reason for Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation__c</fullName>
        <label>Relation</label>
        <picklist>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Related</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Required_Change__c</fullName>
        <label>Required Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retention_Duration__c</fullName>
        <label>Retention Duration (In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Right_vertically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Right (vertically)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SecondaryContentDocumentId__c</fullName>
        <description>To Hold Secondary Document Id</description>
        <inlineHelpText>To Hold Secondary Document Id</inlineHelpText>
        <label>SecondaryContentDocumentId</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryContentVersionId__c</fullName>
        <description>To Hold Secondary Content Version Id</description>
        <inlineHelpText>To Hold Secondary Content Version Id</inlineHelpText>
        <label>SecondaryContentVersionId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_File_Name__c</fullName>
        <label>Secondary File Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Format__c</fullName>
        <label>Secondary Format</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Render</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Effectiveness_Review_In_Advance__c</fullName>
        <label>Effectiveness Review In Advance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inworks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prerelease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Preexpire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit__c</fullName>
        <description>Development: Used to differentiate between save and submit on different scenarios(submit,make current,Edit) to calculate date logic&apos;s</description>
        <label>Submit</label>
        <picklist>
            <picklistValues>
                <fullName>Submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supersede_Previous_Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supersede Previous Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TempStop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TempStop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;script type=&quot;text/javascript&quot;&gt;alert(&apos;Test Value&apos;);&lt;/script&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&amp;#60;script type&amp;#x3D;&amp;#34;text&amp;#x2F;javascript&amp;#34;&amp;#62;alert(&amp;#39;Test Value&amp;#39;);&amp;#60;&amp;#x2F;script&amp;#62;</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UD_Date__c</fullName>
        <label>UD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UD_Picklist__c</fullName>
        <label>UD Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UD_Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NALA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UD_RichText__c</fullName>
        <label>UD RichText</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>UD_Sites__c</fullName>
        <label>Sites</label>
        <picklist>
            <picklistValues>
                <fullName>Site B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liverpool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuala Lumpur</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UD_Text__c</fullName>
        <label>UD Text</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Duration__c</fullName>
        <label>Valid Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Viewonly_Entity_Groups_Name__c</fullName>
        <label>Viewonly Entity Groups Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Viewonly_Entity_Groups__c</fullName>
        <label>Viewonly Entity Groups</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Viewonly_Entity_Users_Name__c</fullName>
        <label>Viewonly Entity Users Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Viewonly_Entity_Users__c</fullName>
        <label>Viewonly Entity Users</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Watermark_Text__c</fullName>
        <label>Watermark Text</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to check that record is locked or not( in approval process or not)</description>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRevise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRevise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTempRevise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTempRevise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTemp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTemp</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Profile</label>
    <listViews>
        <fullName>SSI</fullName>
        <columns>NAME</columns>
        <columns>Current_Rev__c</columns>
        <columns>Title__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>SSI</label>
    </listViews>
    <nameField>
        <label>Document Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Profiles</pluralLabel>
    <recordTypes>
        <fullName>DocumentProfile</fullName>
        <active>true</active>
        <label>DocumentProfile</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PreReleasedDate_cannot_less_CreatedDate</fullName>
        <active>true</active>
        <errorConditionFormula>Created_Date__c   &lt;  PreRelease_Duration_Date__c</errorConditionFormula>
        <errorDisplayField>PreRelease_Duration_Date__c</errorDisplayField>
        <errorMessage>PreRelease Duration Date cannot be lesser than the document created date.</errorMessage>
    </validationRules>
</CustomObject>